# RustOtus

./: .gitignore  Cargo.toml  README.md  compose.yml
oop/src/: main.rs
patterns/examples/: builder.rs  newtype.rs
patterns/src/: main.rs
smart_home/: Cargo.toml
smart_home/src/: lib.rs  main.rs
smart_home_2/: Cargo.toml
smart_home_2/src/: lib.rs  main.rs
smart_home_2s/: Cargo.toml
smart_home_2s/src/: main.rs
smart_home_async/: Cargo.toml
smart_home_async/examples/: client.rs  report.rs  server.rs
smart_home_async/src/: device_info_provider.rs  lib.rs  main.rs  smart_device.rs  smart_socket.rs  smart_thermometer.rs
smart_home_async/tests/: integration.rs
smart_home_async/tests/common/: mod.rs
smart_home_client_server/: Cargo.toml
smart_home_client_server/examples/: client.rs  report.rs  server.rs  smart_socket_server.rs
smart_home_client_server/src/: device_info_provider.rs  lib.rs  main.rs  smart_device.rs  smart_socket.rs  smart_switch.rs  smart_thermometer.rs
smart_home_client_server/tests/: integration.rs
smart_home_crud/: Cargo.toml
smart_home_crud/examples/: report.rs
smart_home_crud/src/: main.rs  smart_device.rs  smart_house.rs
smart_home_crud/tests/: integration.rs
smart_home_dyn_lib/: Cargo.toml
smart_home_dyn_lib/examples/: client.rs  dyn_lib.py  dyn_lib_dynamic.py  dyn_lib_dynamic.rs  dyn_lib_static.rs  gui.rs  http_server.rs  report.rs  server.rs
smart_home_dyn_lib/src/: device_info_provider.rs  http_handler.rs  lib.rs  main.rs  smart_house.rs  smart_socket_gui.rs  smart_socket_lib.rs
smart_home_dyn_lib/tests/: http_server.rs  integration.rs
smart_home_dyn_lib/tests/common/: mod.rs
smart_home_gui/: Cargo.toml
smart_home_gui/examples/: client.rs  gui.rs  gui_smart_socket.rs  http_server.rs  report.rs  server.rs
smart_home_gui/src/: gui.rs  gui_smart_socket.rs  http_handler.rs  lib.rs  main.rs  smart_device.rs  smart_house.rs  smart_house_storage.rs  smart_house_storage_mock.rs  smart_switch.rs
smart_home_gui/tests/: http_server.rs  integration.rs
smart_home_lib_tests/: Cargo.toml
smart_home_lib_tests/examples/: report.rs
smart_home_lib_tests/src/: device_info_provider.rs  lib.rs  main.rs  smart_house.rs
smart_home_lib_tests/tests/: integration.rs
smart_home_oop/: Cargo.toml
smart_home_oop/examples/: dynamic.rs  static.rs
smart_home_oop/src/: composite_static.rs  dynamic.rs  lib.rs  main.rs
smart_home_options/: Cargo.toml
smart_home_options/examples/: report.rs
smart_home_options/src/: device_info_provider.rs  lib.rs  main.rs  smart_device.rs  smart_house.rs
smart_home_options/tests/: integration.rs
smart_home_thiserror/: Cargo.toml
smart_home_thiserror/examples/: client.rs  report.rs  server.rs
smart_home_threads_udp/: Cargo.toml
smart_home_web/: Cargo.toml
smart_home_web/examples/: client.rs  http_server.rs  report.rs  server.rs
smart_home_web/src/: app.rs  http_handler.rs  http_server.rs  lib.rs  main.rs  smart_house.rs  smart_house_storage.rs  smart_house_storage_memory.rs  smart_house_storage_mock.rs  smart_house_storage_mongodb.rs  smart_socket.rs
smart_home_web/tests/: http_server.rs  integration.rs
smart_home_web/tests/common/: mod.rs
(+19 files in other folders)
