[workspace]
members = [
    "smart_home",
    "smart_home_2",
    "smart_home_2s",
    "smart_home_lib_tests",
    "smart_home_options",
    "smart_home_crud",
    "smart_home_client_server",
    "smart_home_threads_udp",
    "smart_home_async",
    "oop",
    "smart_home_thiserror",
    "patterns",
    "smart_home_web",
    "smart_home_gui",
    "smart_home_dyn_lib"
]

resolver = "2"
