[package]
name = "smart_home_async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
tokio = { version = "1.38.0", features = ["net", "macros", "rt-multi-thread", "io-util"] }
async-trait = "0.1.80"