[package]
name = "smart_home_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
tokio = { version = "1.38.0", features = ["net", "macros", "rt-multi-thread", "io-util", "time"] }
async-trait = "0.1.81"
atomic_float = "1.0.0"
atomic_enum = "0.3.0"
thiserror = "1.0.62"
actix-web = "4.8.0"
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.22"
utoipa-swagger-ui = { version = "7.1.0", features = ["actix-web"] }
utoipa = { version = "4.2.3", features = ["chrono", "actix_extras"] }
serde = { version = "1.0.204", features = ["derive"] }
dashmap = "6.0.1"
mongodb = "3.0.1"
futures = "0.3.30"
urlencoding = "2.1.3"
serde_json = "1.0.120"